--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -31,7 +31,6 @@ jobs:
           subscription_id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_313AAC34B2E94031BEA899B4739FDE1B }}
         if: ${{ env.client_id == '' || env.tenant_id == '' || env.subscription_id == '' }}
         run: 'echo "Azure authentication secrets are missing."; exit 1;'
-
   build:
     runs-on: ubuntu-latest
     needs: check
@@ -64,7 +63,9 @@ jobs:
       - name: Clean publish directory
         run: |
           rm -rf ${{ env.PUBLISH_DIRECTORY }}
-          mkdir -p ${{ env.PUBLISH_DIRECTORY }}      - name: Publish
+          mkdir -p ${{ env.PUBLISH_DIRECTORY }}
+
+      - name: Publish
         run: dotnet publish ./BitByBitTrashAPI --output ${{ env.PUBLISH_DIRECTORY }} --configuration Release --no-build
 
       - name: Upload artifact for deployment job
