--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -31,6 +31,7 @@ jobs:
           subscription_id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_313AAC34B2E94031BEA899B4739FDE1B }}
         if: ${{ env.client_id == '' || env.tenant_id == '' || env.subscription_id == '' }}
         run: 'echo "Azure authentication secrets are missing."; exit 1;'
+
   build:
     runs-on: ubuntu-latest
     needs: check
@@ -45,13 +46,13 @@ jobs:
           dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore BitByBitTrashAPI.sln
 
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build BitByBitTrashAPI.sln --no-restore --configuration Release
 
       - name: Test
-        run: dotnet test --no-build --configuration Release --verbosity normal --logger trx --results-directory TestResults
+        run: dotnet test BitByBitTrashAPI.sln --no-build --configuration Release --verbosity normal --logger trx --results-directory TestResults
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
