Fix ( Connectionstring, aspnetusers not found fixed)

--- a/BitByBitTrashAPI/BitByBitTrashAPI.csproj
+++ b/BitByBitTrashAPI/BitByBitTrashAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6ba5c5c2-ab47-45f2-9050-788612e521c8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
