--- a/BitByBitTrashAPI/appsettings.Development.json
+++ b/BitByBitTrashAPI/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "connectionString": "Server=tcp:14bitbybit.database.windows.net,1433;Initial Catalog=14bitbybit;Persist Security Info=False;User ID=BitByBitSQL;Password=BitByBit1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
 }
