--- a/BitByBitTrashAPI/appsettings.json
+++ b/BitByBitTrashAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:14bitbybit.database.windows.net,1433;Initial Catalog=14bitbybit;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+  }
 }
