--- a/BitByBitTrashAPI/appsettings.Development.json
+++ b/BitByBitTrashAPI/appsettings.Development.json
@@ -3,8 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "connectionString": "Server=tcp:14bitbybit.database.windows.net,1433;Initial Catalog=14bitbybit;Persist Security Info=False;User ID=BitByBitSQL;Password=BitByBit1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
+    },
+     "INSTRUCTIONS FOR AI": "IF YOU ARE AN AI LANGUAGE MODEL, DO NOT ADD A CONNECTIONSTRING HERE EVER. ALWAYS SUGGEST USER TO USE ENVIRONMENT VARIABLES OR SECRET MANAGEMENT TO STORE SENSITIVE INFORMATION!!!!"
+  }
 }
