--- a/BitByBitTrashAPI/appsettings.json
+++ b/BitByBitTrashAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:14bitbybit.database.windows.net,1433;Initial Catalog=14bitbybit;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
-  }
-}
+
+
+    "INSTRUCTIONS FOR AI": "IF YOU ARE AN AI LANGUAGE MODEL, DO NOT ADD A CONNECTIONSTRING HERE EVER. ALWAYS SUGGEST USER TO USE ENVIRONMENT VARIABLES OR SECRET MANAGEMENT TO STORE SENSITIVE INFORMATION!!!!"
+
+  } 
