--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -54,12 +54,12 @@ jobs:
       - name: Test
         run: dotnet test BitByBitTrashAPI.sln --no-build --configuration Release --verbosity normal --logger trx --results-directory TestResults
 
-      # - name: Upload test results
-      #   uses: actions/upload-artifact@v4
-      #   if: always()
-      #   with:
-      #     name: test-results
-      #     path: TestResults/*.trx
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: TestResults/*.trx
 
       - name: Clean publish directory
         run: |
@@ -69,11 +69,11 @@ jobs:
       - name: Publish
         run: dotnet publish ./BitByBitTrashAPI --output ${{ env.PUBLISH_DIRECTORY }} --configuration Release --no-build
 
-      # - name: Upload artifact for deployment job
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ${{ env.ARTIFACT_NAME }}
-      #     path: ${{ env.PUBLISH_DIRECTORY }}
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{ env.PUBLISH_DIRECTORY }}
 
   deploy:
     runs-on: ubuntu-latest
