--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -45,6 +45,14 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
+      - name: Install EF Core Tools
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Update database
+        run: |
+          export PATH="$PATH:/home/runner/.dotnet/tools"
+          dotnet ef database update --context BitByBitTrashAPI.Service.LitterDbContext
+
       - name: Restore dependencies
         run: dotnet restore BitByBitTrashAPI.sln
 
@@ -54,13 +62,6 @@ jobs:
       - name: Test
         run: dotnet test BitByBitTrashAPI.sln --no-build --configuration Release --verbosity normal --logger trx --results-directory TestResults
 
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results
-          path: TestResults/*.trx
-
       - name: Clean publish directory
         run: |
           rm -rf ${{ env.PUBLISH_DIRECTORY }}
@@ -68,12 +69,6 @@ jobs:
 
       - name: Publish
         run: dotnet publish ./BitByBitTrashAPI --output ${{ env.PUBLISH_DIRECTORY }} --configuration Release --no-build
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.PUBLISH_DIRECTORY }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -85,12 +80,6 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.PUBLISH_DIRECTORY }}
-
       - name: Login to Azure
         uses: azure/login@v2
         with:
