--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Update database
         run: |
           export PATH="$PATH:/home/runner/.dotnet/tools"
-          dotnet ef database update --context BitByBitTrashAPI.Service.LitterDbContext
+          dotnet ef database update --project BitByBitTrashAPI/BitByBitTrashAPI.csproj --context BitByBitTrashAPI.Service.LitterDbContext
 
       - name: Restore dependencies
         run: dotnet restore BitByBitTrashAPI.sln
