--- a/.github/workflows/master_bitbybitwebapi.yml
+++ b/.github/workflows/master_bitbybitwebapi.yml
@@ -52,6 +52,8 @@ jobs:
         run: |
           export PATH="$PATH:/home/runner/.dotnet/tools"
           dotnet ef database update --project BitByBitTrashAPI/BitByBitTrashAPI.csproj --context BitByBitTrashAPI.Service.LitterDbContext
+        env:
+          ConnectionStrings__DefaultConnection: ${{ secrets.DEFAULT_CONNECTION_STRING }}
 
       - name: Restore dependencies
         run: dotnet restore BitByBitTrashAPI.sln
