--- a/BitByBitTrashAPI/Properties/launchSettings.json
+++ b/BitByBitTrashAPI/Properties/launchSettings.json
@@ -15,6 +15,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7023;http://localhost:5091",
+      "applicationUrl": "http://localhost:5091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
