--- a/BitByBitTrashAPI/Properties/launchSettings.json
+++ b/BitByBitTrashAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7023;http://localhost:5091",
+      //"applicationUrl": "https://localhost:7023;http://localhost:5091",
       "applicationUrl": "http://localhost:5091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
